Fixed Search Box and buttons
Had to research css to figure out why my search bar wasn't looking very
good. So I fixed that and it looks cleaner. Also fixed buttons will be
adding css to them shortly. Then put mic into the search bar. (tbd if I
want to keep it there)

--- a/google-homepage easy/css/style.css
+++ b/google-homepage easy/css/style.css
@@ -11,10 +11,7 @@ body {
     margin: 0;
 }
 
-.container {
-    display: block;
-}
-
+/* Nav Menu Up Top */
 .navigation {
     float: right;
     margin: 7px 15px 0 0;
@@ -26,12 +23,43 @@ ul.nav {
     font-size: 12px;
 }
 
+.pic {
+    border-radius: 100%;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    max-width: 30px;
+    max-height: 30px;
+}
+
+/*Main Section with Logo & Search */
+
 .logo {
     max-width: 272px;
     max-height: 92px;
 }
 
+.search-container {
+    width: 100%;
+    height: 500px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.search, .search input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 20px;
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .mic {
     max-width: 29px;
     max-height: 36px;
+}
+
+.button
+{
+
 }
